# private-buddy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dist-linux-on-mac.sh  electron-builder.yml  package-lock.json  package.json
doc/: memory-system-forgetting-and-retrieval.md  narrative-engineering-and-user-state.md  task-execution-and-reader-oriented-memory.md
electron/: config.ts  main.ts  preload.ts  server-manager.ts  splash.html  tsconfig.json
server/: .env.example  README.md  go.mod  go.sum  pyproject.toml  restart.sh  setup.sh  start.sh  stop.sh
server/app/: config.py  database.py  main.py
server/app/api/: agents.py  interactions.py  sessions.py  uploads.py
server/app/models/: __init__.py  agent.py  base.py  db_version.py  embedding_config.py  historical_summary.py  interaction.py  llm_config.py  message.py  search_config.py  session.py
server/app/schemas/: agent.py
server/app/services/: __init__.py
server/app/services/chat/: background_tasks.py  chat_service.py
server/app/services/chat/context/: __init__.py  assembly.py  narrative.py  preprocessing.py  retrieval.py  summary.py  user_state.py  vector_store.py
server/app/services/context/: __init__.py  assembly.py  narrative.py  user_state.py
server/app/services/dto/: __init__.py  task_result.py
server/app/services/llm/: __init__.py  llm_logger.py
server/app/services/task/: __init__.py  llm_client.py  requirement_rewriter.py  task_executor.py  task_loop.py  workspace.py
server/app/services/task/context/: manager.py
server/app/services/task/tools/: base.py  bash.py  web_search.py  write_notes.py
server/cmd/: main.go
server/database/: README.md  init_db.sh
server/database/sql/: 0.0.6.sql  full_init.sql
server/internal/api/: router.go
server/internal/api/handler/: chat.go  handler.go  helper.go  kb.go  upload.go
server/internal/api/middleware/: cors.go  embedding.go
server/internal/api/response/: response.go
server/internal/config/: config.go
server/internal/constants/: file_types.go
server/internal/database/: database.go
server/internal/logger/: logger.go
server/internal/model/: agent.go  agent_observation.go  db_version.go  document.go  document_chunk.go  embedding_config.go  entity_profile.go  event.go  event_vector.go  historical_summary.go  interaction.go  knowledge_base.go  llm_config.go  message.go  model_capability.go  search_config.go  session.go  user.go
server/internal/schema/: agent.go  document.go  embedding_config.go  interaction.go  knowledge_base.go  llm_config.go  message.go  search_config.go  session.go  user.go
server/internal/service/: crud.go  data_service.go  search_service.go
server/internal/service/chat/: chat_service.go
server/internal/service/chat/chatcontext/: assembly.go  narrative.go  person_state.go  preprocessing.go  retrieval.go  summary.go
server/internal/service/chat/chatctx/: assembly.go  narrative.go  preprocessing.go  retrieval.go  summary.go  user_state.go
server/internal/service/kb/: deleted_tracker.go  document_processor.go  index_manager.go  kb_service.go  retriever.go  text_extractor.go  text_splitter.go  vector_store.go
server/internal/service/llm/: capability.go  chat_model.go  embedding.go
server/internal/service/memory/: cron.go  doc.go  entity_profile.go  event_vector.go  ingester.go  memory.go  score.go
server/internal/service/runtime/: agent_runtime.go  decision.go  heartbeat_checks.go  manager.go  work.go
server/internal/service/task/: executor.go  rewriter.go  task_loop.go
server/internal/service/task/context/: manager.go
server/internal/service/task/tools/: base.go  bash.go  wake_me_when.go  web_search.go  write_notes.go
server/internal/service/vectorstore/: vector_store.go
server/pkg/hnsw/: README.md  encode.go  graph.go
(+28 files in other folders)
